Update index.html content

--- a/cars/bmw.html
+++ b/cars/bmw.html
@@ -15,10 +15,11 @@
       <img src="../images/bmw.jpeg" alt="BMW X5" />
       <h2>Полные характеристики:</h2>
       <ul>
-        <li>Мощность: 340 л.с.</li>
+        <li>Год выпуска: 2015</li>
         <li>Объем двигателя: 3.0 л</li>
-        <li>Разгон 0-100 км/ч: 5.5 сек</li>
-        <li>Привод: Полный</li>
+        <li>КПП: Автомат</li>
+        <li>Топливо: Бензин</li>
+        <li>Цена: 14 500 000 ₸</li>
       </ul>
       <a href="../index.html" class="button">Назад</a>
     </div>
