--- a/cars/mers.html
+++ b/cars/mers.html
@@ -15,10 +15,11 @@
       <img src="../images/mers.jpeg" alt="Mercedes G-Class" />
       <h2>Полные характеристики:</h2>
       <ul>
-        <li>Мощность: 240 л.с.</li>
+        <li>Год выпуска: 2024</li>
         <li>Объем двигателя: 3.5 л</li>
-        <li>Разгон 0-100 км/ч: 7.5 сек</li>
-        <li>Привод: Полный</li>
+        <li>КПП: Автомат</li>
+        <li>Топливо: Бензин</li>
+        <li>Цена: 113 000 000 ₸</li>
       </ul>
       <a href="../index.html" class="button">Назад</a>
     </div>
