--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
 </head>
 <body>
   <header>
-    <h1>Мир Машин</h1>
+    <h1>China avto</h1>
   </header>
   <main class="container">
     <div class="card">
       <img src="images/bmw.jpeg" alt="BMW" />
       <h2>BMW X5</h2>
-      <p>Надежный кроссовер с отличной динамикой.</p>
+      <p>Цена: 14 500 000 ₸</p>
+      <p>Год: 2015 | Двигатель: 3.0 л | Автомат</p>
       <a href="cars/bmw.html" class="button">Подробнее</a>
     </div>
     <div class="card">
       <img src="images/audi.jpeg" alt="Audi" />
       <h2>Audi A6</h2>
-      <p>Комфортный седан для городской жизни.</p>
+      <p>Цена: 11 290 000 ₸</p>
+      <p>Год: 2015 | Двигатель: 2.0 л | Автомат</p>
       <a href="cars/audi.html" class="button">Подробнее</a>
     </div>
     <div class="card">
       <img src="images/mers.jpeg" alt="Mercedes" />
       <h2>Mercedes G-Class</h2>
-      <p>Легендарный внедорожник для любых дорог.</p>
+      <p>Цена: 113 000 000 ₸</p>
+      <p>Год: 2024 | Двигатель: 3.5 л | Автомат</p>
       <a href="cars/mers.html" class="button">Подробнее</a>
     </div>
   </main>
