--- a/cars/audi.html
+++ b/cars/audi.html
@@ -15,10 +15,11 @@
       <img src="../images/audi.jpeg" alt="Audi A6" />
       <h2>Полные характеристики:</h2>
       <ul>
-        <li>Мощность: 320 л.с.</li>
+        <li>Год выпуска: 2015</li>
         <li>Объем двигателя: 2.0 л</li>
-        <li>Разгон 0-100 км/ч: 6.5 сек</li>
-        <li>Привод: Задний</li>
+        <li>КПП: Автомат</li>
+        <li>Топливо: Бензин</li>
+        <li>Цена: 11 290 000 ₸</li>
       </ul>
       <a href="../index.html" class="button">Назад</a>
     </div>
