--- a/index.html
+++ b/index.html
@@ -74,14 +74,16 @@
 
 
         <main class="main-content">
-            <div class="nav-tabs">
-    <div class="tabs-section">
-        <button class="tab-btn active" onclick="showTab('catalog')" data-ru="Каталог" data-kz="Каталог">Каталог</button>
-        <button class="tab-btn" onclick="showTab('favorites')" data-ru="Избранное" data-kz="Таңдаулылар">Избранное</button>
+            <div class="nav-tabs-container">
+    <div class="nav-tabs">
+        <div class="tabs-section">
+            <button class="tab-btn active" onclick="showTab('catalog')" data-ru="Каталог" data-kz="Каталог">Каталог</button>
+            <button class="tab-btn" onclick="showTab('favorites')" data-ru="Избранное" data-kz="Таңдаулылар">Избранное</button>
+        </div>
     </div>
     <div class="language-switch">
-        <button class="lang-btn" onclick="switchLanguage('ru')">Русский</button>
-        <button class="lang-btn active" onclick="switchLanguage('kz')">Қазақша</button>
+        <button class="lang-btn active" onclick="switchLanguage('ru')">Русский</button>
+        <button class="lang-btn" onclick="switchLanguage('kz')">Қазақша</button>
     </div>
 </div>
 
