--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <button class="tab-btn active" onclick="showTab('catalog')" data-ru="Каталог" data-kz="Каталог">Каталог</button>
             <button class="tab-btn" onclick="showTab('favorites')" data-ru="Избранное" data-kz="Таңдаулылар">Избранное</button>
         </div>
-    </div>
-    <div class="language-switch">
-        <button class="lang-btn active" onclick="switchLanguage('ru')">Русский</button>
-        <button class="lang-btn" onclick="switchLanguage('kz')">Қазақша</button>
+        <div class="language-switch">
+            <button class="lang-btn" onclick="switchLanguage('ru')">Русский</button>
+            <button class="lang-btn active" onclick="switchLanguage('kz')">Қазақша</button>
+        </div>
     </div>
 </div>
 
