Чуть закончил сайт

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
         <div class="logo">
             <img src="images/logo.png" alt="China Avto Logo">
         </div>
+
+        <div class="bank-logos">
+    <img src="images/eubank.png" alt="Eurasian Bank" />
+    <img src="images/bereke.png" alt="Bereke Bank" />
+    <img src="images/freedom.png" alt="Freedom Bank" />
+    <img src="images/bankcenter.png" alt="CenterCredit Bank" />
+    <img src="images/jetcar.png" alt="JetCar" />
+    <img src="images/sapa.png" alt="Sapa Bank" />
+    <img src="images/shinhan.png" alt="Shinhan Bank" />
+    
+  </div>
     </header>
 
     <div class="container">
@@ -37,24 +48,6 @@
                 </select>
             </div>
 
-            <div class="filter-group">
-                <label data-ru="Кузов" data-kz="Кузов">Кузов</label>
-                <select id="bodyFilter">
-                    <option value="" data-ru="Все типы" data-kz="Барлық түрлер">Все типы</option>
-                    <option value="Седан" data-ru="Седан" data-kz="Седан">Седан</option>
-                    <option value="Кроссовер" data-ru="Кроссовер" data-kz="Кроссовер">Кроссовер</option>
-                    <option value="Хэтчбек" data-ru="Хэтчбек" data-kz="Хэтчбек">Хэтчбек</option>
-                </select>
-            </div>
-
-            <div class="filter-group">
-                <label data-ru="Растаможен" data-kz="Кедендеген">Растаможен</label>
-                <select id="customsFilter">
-                    <option value="" data-ru="Все" data-kz="Барлығы">Все</option>
-                    <option value="да" data-ru="Да" data-kz="Иә">Да</option>
-                    <option value="нет" data-ru="Нет" data-kz="Жоқ">Нет</option>
-                </select>
-            </div>
 
             <div class="filter-group">
                 <label data-ru="Год выпуска" data-kz="Шығарылған жылы">Год выпуска</label>
